tests/baselines/reference/parserClassDeclaration5.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration5.ts (6 errors) ====
    class C extends A implements B implements C {
                                   ~~~~~~~~~~
!!! error TS1005: '{' expected.
                                              ~
!!! error TS1005: ';' expected.
                                                ~
!!! error TS1005: ';' expected.
                    ~
!!! error TS2304: Cannot find name 'A'.
                                 ~
!!! error TS2304: Cannot find name 'B'.
                                   ~~~~~~~~~~
!!! error TS2304: Cannot find name 'implements'.
    }